--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,5 +23,6 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Runs a single command using the runners shell
+     
       - name: Run pwd
-        run: pwd
+        run: cd / && pwd
