--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Run pwd
         run: cd / && pwd
         
-      - name: Run pwd
-        run: cd / && pwd
+      - name: Run ls
+        run: cd / && ls -al
