--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,10 @@ jobs:
       - name: Copy Jar
         run: cp ./build/libs/*.jar ./deploy/
 
+      # appspec.yml Copy
+      - name: Copy appspec
+        run: cp appspec.yml ./deploy/
+
       # 압축파일 형태로 전달
       - name: Make zip file
         run: zip -r -qq -j ./springboot-intro-build.zip ./deploy
@@ -54,5 +58,18 @@ jobs:
         run: |
           aws s3 cp \
           --region ap-northeast-2 \
-          --acl private \ 
-	  ./springboot-intro-build.zip s3://springboot-intro-build/
+          --acl private \
+          ./springboot-intro-build.zip s3://springboot-intro-build/
+
+      # Deploy
+      - name: Deploy
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          aws deploy create-deployment \
+          --application-name springboot-intro \
+          --deployment-group-name springboot-intro-deploy-group \
+          --file-exists-behavior OVERWRITE \
+          --s3-location bucket=springboot-intro-build,bundleType=zip,key=springboot-intro-build.zip \
+          --region ap-northeast-2
