--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,11 +44,15 @@ jobs:
 
       # appspec.yml Copy
       - name: Copy appspec
-        run: cp appspec.yml ./deploy/
+        run: cp ./appspec.yml ./deploy/
+
+      # script file Copy
+      - name: Copy shell
+        run: cp ./scripts/* ./deploy/
 
       # 압축파일 형태로 전달
       - name: Make zip file
-        run: zip -r -qq -j ./springboot-intro-build.zip ./deploy
+        run: zip -r -qq -j ./springboot-intro-build.zip ./deploy/
 
       # S3 Bucket으로 copy
       - name: Deliver to AWS S3
