--- a/src/main/resources/application-real2.properties
+++ b/src/main/resources/application-real2.properties
@@ -1,7 +1,8 @@
 spring.h2.console.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
-spring.datasource.url=${{ secrets.DATABASE_URL }}
-spring.datasource.username=${{ secrets.DATABASE_USERNAME }}
-spring.datasource.password=${{ secrets.DATABASE_PASSWORD }}
+jdbc:h2:mem
+#spring.datasource.url=${{ secrets.DATABASE_URL }}
+#spring.datasource.username=${{ secrets.DATABASE_USERNAME }}
+#spring.datasource.password=${{ secrets.DATABASE_PASSWORD }}
 spring.jpa.hibernate.ddl-auto=update
 server.port=8082
