--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,7 +63,7 @@ jobs:
           aws s3 cp \
           --region ap-northeast-2 \
           --acl private \
-          ./springboot-intro-build.zip s3://springboot-intro-build/
+          ./springboot-intro-build.zip s3://deploy-bucket-coffee/
 
       # Deploy
       - name: Deploy
@@ -72,8 +72,8 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           aws deploy create-deployment \
-          --application-name springboot-intro \
-          --deployment-group-name springboot-intro-deploy-group \
+          --application-name springboot \
+          --deployment-group-name springboot-deploy \
           --file-exists-behavior OVERWRITE \
-          --s3-location bucket=springboot-intro-build,bundleType=zip,key=springboot-intro-build.zip \
+          --s3-location bucket=deploy-bucket-coffee,bundleType=zip,key=springboot-intro-build.zip \
           --region ap-northeast-2
