--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -22,5 +22,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: ls -al
-        run: ls -al
+      - name: ls -al /
+        run: ls -al /
