--- a/appspec.yml
+++ b/appspec.yml
@@ -2,24 +2,22 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/sparta/deploy
+    destination: /home/ubuntu/sparta/
+    overwrite: yes
 
 permissions:
-  - object: /
-    pattern: "**"
-    owner: ubuntu
-    group: ubuntu
+  - object: /home/ubuntu/sparta/
+    owner: root
+    group: root
+    mode: 755
 
 hooks:
+  hooks:
   AfterInstall:
-    - location: stop.sh # nginx와 연결되지 않은 스프링 부트 종료.
+    - location: deploy.sh
       timeout: 60
-      runas: ubuntu
-  ApplicationStart:
-    - location: start.sh # nginx와 연결되어 있지 않은 포트로 스프링 부트 시작.
-      timeout: 60
-      runas: ubuntu
-  ValidateService:
-    - location: health.sh # 새 서비스 health check.
-      timeout: 60
-      runas: ubuntu
+      runas: root
+
+
+
+
