--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,7 +61,7 @@ jobs:
           aws s3 cp \
           --region ap-northeast-2 \
           --acl private \
-          ./springboot-intro-build.zip s3://deploy-bucket-coffee/
+          ./springboot-intro-build.zip s3://final-coffee/
 
       # Deploy
       - name: Deploy
