--- a/appspec.yml
+++ b/appspec.yml
@@ -2,11 +2,11 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/sparta/
+    destination: /home/ubuntu/docker/image
     overwrite: yes
 
 permissions:
-  - object: /home/ubuntu/sparta/
+  - object: /home/ubuntu/docker
     owner: root
     group: root
     mode: 755
